tests/syntax/incorrect_syntax/no_code_block.stderr
error: character literal may only contain one codepoint
 --> tests/syntax/incorrect_syntax/no_code_block.stderr:1:19
  |
1 | error: expected a '{...}' code block
  |                   ^^^^^^^
  |
help: if you meant to write a `str` literal, use double quotes
  |
1 | error: expected a "{...}" code block
  |                   ~~~~~~~

error: unknown start of token: `
 --> tests/syntax/incorrect_syntax/no_code_block.stderr:7:46
  |
7 |   = note: this error originates in the macro `to_stream` (in Nightly builds, run with -Z macro-backtrace for more info)
  |                                              ^
  |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
  |
7 |   = note: this error originates in the macro 'to_stream` (in Nightly builds, run with -Z macro-backtrace for more info)
  |                                              ~

error: unknown start of token: `
 --> tests/syntax/incorrect_syntax/no_code_block.stderr:7:56
  |
7 |   = note: this error originates in the macro `to_stream` (in Nightly builds, run with -Z macro-backtrace for more info)
  |                                                        ^
  |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
  |
7 |   = note: this error originates in the macro `to_stream' (in Nightly builds, run with -Z macro-backtrace for more info)
  |                                                        ~

error: expected one of `!` or `::`, found `:`
 --> tests/syntax/incorrect_syntax/no_code_block.stderr:1:6
  |
1 | error: expected a '{...}' code block
  |      ^ expected one of `!` or `::`
